--- a/htdocs/egcs-1.0/egcs-1.0.2.html
+++ b/htdocs/egcs-1.0/egcs-1.0.2.html
@@ -84,7 +84,7 @@ GCC 2.8.
   <li>Integrated C++ runtime libraries, including support for most major
   linux systems!
   <li>The integrated libstdc++ library includes a verbatim copy of 
-  <a href="http://www.sgi.com/Technology/STL">SGI's STL release.</a>
+  <a href="http://www.sgi.com/Technology/STL/">SGI's STL release.</a>
   <li>Integrated GNU Fortran compiler
   <li>New instruction scheduler
   <li>New alias analysis code
