--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -32,7 +32,7 @@ if you are mirroring the GCC pages so we can note it here!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
 <LI>Germany: <A HREF="ftp://ftp.uni-trier.de/pub/languages/c/implementation/egcs/">ftp.uni-trier.de</a>
 <LI>Germany: <A HREF="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/egcs/">ftp.mpi-sb.mpg.de</a>
-<LI>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu//egcs/">ftp.ntua.gr</a>,
+<LI>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/egcs/">ftp.ntua.gr</a>,
 <LI>Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
 <li>Japan: <a href="ftp://sysg.kek.jp/cygnus/egcs">sysg.kek.jp</a>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs">ftp.eos.hokudai.ac.jp</a>
