--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -290,7 +290,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
   <li><a href="http://www.compilerconnection.com/">Links related to many
   compiler topics</a>
 
-  <li><a href="http://www.iecc.com/compilers">Comp.compilers archive</a>
+  <li><a href="http://www.iecc.com/compilers/">Comp.compilers archive</a>
 
   <li><a href="http://reality.sgi.com/employees/austern_mti/std-c++/faq.html">comp.std.c++ FAQ</a>
 
