Update infos on Sun V5.0 compilers bug which we worked around in 2.95.2.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -543,9 +543,9 @@ recommend it only for people who use Sun's compilers.</p>
 
 <hr>
 <h3><a name="sunv5">Sun V5.0 Compiler Bugs</a></h3>
-The Sun V5.0 compilers are known to mis-compile GCC, which in turn causes
-GCC to fail its bootstrap comparison test.  We expect to have a workaround
-ready in time for GCC 2.95.2.
+The Sun V5.0 compilers are known to mis-compile GCC 2.95 and GCC 2.95.1,
+which in turn causes GCC to fail its bootstrap comparison test.
+GCC 2.95.2 has a workaround.
 
 
 <hr>
@@ -598,7 +598,7 @@ will be discarded automatically.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
-<p><i>Last modified on November 3, 1999.</i></p>
+<p><i>Last modified on November 23, 1999.</i></p>
 
 </body>
 </html>
