Fix mirror address & a few layout thingies

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -55,15 +55,14 @@ if you are mirroring the GCC pages so we can note it here!
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
-<LI>Taiwan <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">TAIWAN: ftp1.sinica.edu.tw</a>
-<li>Taiwan: <a href="ftp://ftp.edu.tw/computer-languages/C/egcs/">ftp.edu.tw</a>
-<li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/egcs/">ftp.nctu.edu.tw</a>
+<LI>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">ftp1.sinica.edu.tw</a>
+<li>Taiwan: <a href="ftp://ftp.edu.tw/computer-languages/C/gcc/">ftp.edu.tw</a>
+<li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>
 <li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr/pub/egcs">gcc.deu.edu.tr</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> 
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
-<li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
-thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
+<li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>, thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 </ul>
 
 <p>If you wish to host a new mirror site, please contact
@@ -77,7 +76,7 @@ where the mirror is located.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on November 22, 1999.</i></small>
+<small><i>Last modified on November 24, 1999.</i></small>
 </address>
 
 </body>
