Add ir to the list of online docs.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -19,6 +19,7 @@ existing release.</p>
        <li><a href="g77_news.html"> G77 News</a>
        <li><a href="g77_bugs.html"> G77 Bugs</a>
   </ul>
+  <li> <a href="ir_toc.html"> Tree Representation Internals</a>
   <li> <a href="gxxint_toc.html"> G++ Internals Manual</a>
   <li> <a href="cpp_toc.html"> CPP Manual</a>
   <li> <a href="gcov_toc.html"> GCOV Manual</a>
@@ -27,7 +28,7 @@ existing release.</p>
   <li> <a href="objc-features_toc.html"> ObjC Features</a>
 <hr>
 
-<i>Last modified on October 26, 1999.</i>
+<i>Last modified on November 23, 1999.</i>
 
 </body>
 </html>
