News item for the AM33 contribution.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -101,6 +101,13 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>December 1, 1999</b></dt>
+<dd>
+Cygnus has donated support for the Matsushita AM33 processor (a member
+of the MN10300 processor family).  The MN103 family is targeted towards
+embedded consumer products such as DVD players, HDTV, etc.
+</dd>
+
 <dt><b>October 27, 1999</b></dt>
 <dd>
 <a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2 is released</a>.
@@ -139,7 +146,7 @@ href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on November 16, 1999.</i></small>
+<small><i>Last modified on December 1, 1999.</i></small>
 </address>
 
 </body>
