- Don't include benchmarks in regular web pages. - Add December.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -59,7 +59,7 @@ all web pages.
      m/ti(meline.html), excluding testresults and benchresults.
      FIXME: Better wording.  -->
 <option
-value="m/a|m/be|m/bu|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/o|m/p|m/r|m/s|m/th|/m/ti|m/w">
+value="m/a|m/bu|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/o|m/p|m/r|m/s|m/th|/m/ti|m/w">
 all regular web pages.
 </select>
 <br>
@@ -68,7 +68,7 @@ all regular web pages.
 </font>
 <br>
 <input type=checkbox name=restrict
-value="m/a|m/bu|m/ba|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/p|m/r|m/s|m/ti|m/th|m/w">
+value="m/a|m/bu|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/p|m/r|m/s|m/ti|m/th|m/w">
 "Main" <a href="index.html">GCC</a>&nbsp;
 <input type=checkbox name=restrict value="m/o">
 <a href="onlinedocs/">
@@ -129,6 +129,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
       Note also that the lists from 1997-1998 are not here, except for
      ...-announce.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/1999-12">Dec 1999
 <option value="gcc/1999-11">Nov 1999
 <option value="gcc/1999-10">Oct 1999
 <option value="gcc/1999-09">Sep 1999
@@ -142,6 +143,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc/1999-01">Jan 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/1999-12">Dec 1999
 <option value="gcc-bugs/1999-11">Nov 1999
 <option value="gcc-bugs/1999-10">Oct 1999
 <option value="gcc-bugs/1999-09">Sep 1999
@@ -154,6 +156,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-bugs/1999-02">Feb 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/1999-12">Dec 1999
 <option value="gcc-patches/1999-11">Nov 1999
 <option value="gcc-patches/1999-10">Oct 1999
 <option value="gcc-patches/1999-09">Sep 1999
@@ -166,11 +169,13 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-patches/1999-02">Feb 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/1999-12">Dec 1999
 <option value="gcc-help/1999-11">Nov 1999
 <option value="gcc-help/1999-10">Oct 1999
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/1999-12">Dec 1999
 <option value="gcc-cvs/1999-11">Nov 1999
 <option value="gcc-cvs/1999-10">Oct 1999
 <option value="gcc-cvs/1999-09">Sep 1999
@@ -184,6 +189,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-cvs/1999-01">Jan 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/1999-12">Dec 1999
 <option value="gcc-testresults/1999-11">Nov 1999
 <option value="gcc-testresults/1999-10">Oct 1999
 <option value="gcc-testresults/1999-09">Sep 1999
