Updated the thanks list

--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -62,9 +62,10 @@ Please keep this list in alphabetical order.
 <ul>
 <li>Geoff Berry for his object serialization work and various patches.
 <li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a>.
+<li>Godmar Back for his improvements and encouragement.
 <li>Per Bothner for dreaming up, designing and implementing much of gcj.
 <li>Steve Chamberlain for config fixes and the picoJava port.
-<li>Jean-Marc Chandonia for various library patches.
+<li>John-Marc Chandonia for various library patches.
 <li>Eric Christopher for his porting help and clean-ups.
 <li>The GCC project <a
 href="http://gcc.cygnus.com/thanks.html">contributors</a> for all of their
@@ -75,6 +76,7 @@ great compiler work.
 <li>Bryce McKinlay for numerous libgcj fixes and improvements.
 <li>Jason Molenda for maintaining the project infrastructure on
 <a href="http://sourceware.cygnus.com">sourceware.cygnus.com</a>.
+<li>Mike Moreton for his various patches.
 <li>Alexandre Oliva for all of this porting and testing efforts.
 <li>Kresten Krab Thorup for his fantastic bytecode interpreter.
 <li>Warren Levy for his tremendous library work.
@@ -92,23 +94,34 @@ We'd also like to thank the folks who have contributed time and energy
 in testing GCJ:
 
 <ul>
+<li>Michael Abd-El-Malek
 <li>Bonzo Armstrong
+<li>Steven Ashe
 <li>Chris Baldwin
 <li>David Billinghurst
 <li>Jim Blandy
 <li>Stephane Bortzmeyer
+<li>Joerg Brunsmann
 <li>Bradford Castalia
 <li>Richard Emberson
 <li>Mark K. Gardner
 <li>Simon Gornall
+<li>John Griffin
+<li>Kevin B. Hendricks
+<li>Patrik Hagglund
 <li>Amancio Hasty 
 <li>Joep Jansen
+<li>Tobias Kuipers
 <li>Anon A. Mous
+<li>Pekka Nikander
 <li>Jon Olson
 <li>Paul Reilly
 <li>Tom Reilly
+<li>Danny Sadinoff
 <li>Marc Schifer
 <li>Franz Sirl
+<li>Adam Sulmicki
+<li>Frederik Warg
 </ul>
 
 Thank you all!
@@ -121,7 +134,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.1 1999/09/07 00:34:01 green Exp $
+$Id: thanks.html,v 1.2 1999/10/02 16:29:22 green Exp $
 </small>
 </address>
 
