Announce the new inliner for C++ by Mark Mitchell.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -101,6 +101,14 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>December 10, 1999</b></dt>
+<dd>
+CodeSourcery, LLC has contributed a <a href="news/inlining.html">inliner for
+C++</a>. As a result, memory consumption and compile-time may be dramatically
+reduced for programs that make heavy use of templates.
+</dd>
+
+
 <dt><b>December 1, 1999</b></dt>
 <dd>
 Cygnus has donated support for the Matsushita AM33 processor (a member
@@ -146,7 +154,7 @@ href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on December 1, 1999.</i></small>
+<small><i>Last modified on December 10, 1999.</i></small>
 </address>
 
 </body>
