Add a missing "new" in the latest announcement.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -103,7 +103,7 @@ maintain and improve quality.
 
 <dt><b>December 10, 1999</b></dt>
 <dd>
-CodeSourcery, LLC has contributed a <a href="news/inlining.html">inliner for
+CodeSourcery, LLC has contributed a new <a href="news/inlining.html">inliner for
 C++</a>. As a result, memory consumption and compile-time may be dramatically
 reduced for programs that make heavy use of templates.
 </dd>
