Add affiliations for steering committee members and some clarifying notes.

--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -21,20 +21,29 @@ At the moment the steering committee has 13 members. The best place to
 reach them is the gcc <a href="lists.html">mailinglist</a>.
 
 <ul>
-<li>Per Bothner
-<li>Joe Buck
-<li>David Edelsohn
+<li>Per Bothner (independent consultant)
+<li>Joe Buck (Synopsys)
+<li>David Edelsohn (IBM)
 <li>Kaveh R. Ghazi
-<li>Torbjorn Granlund
-<li>Jeffrey A. Law
-<li>Marc Lehmann
-<li>Jason Merrill
-<li>David Miller
-<li>Toon Moene
-<li>Gerald Pfeifer
-<li>Joel Sherrill
-<li>Jim Wilson
+<li>Torbjorn Granlund (Swox AB)
+<li>Jeffrey A. Law (Cygnus)
+<li>Marc Lehmann (Technische Universität Karlsruhe)
+<li>Jason Merrill (Cygnus)
+<li>David Miller (RedHat)
+<li>Toon Moene (Koninklijk Nederlands Meteorologisch Instituut)
+<li>Gerald Pfeifer (Vienna University of Technology)
+<li>Joel Sherrill (OAR Corporation)
+<li>Jim Wilson (Cygnus)
 </ul>
+
+<small><p>Membership in the steering committee is a personal membership.
+Affiliations are listed for identification purposes only; steering
+committee members do not represent their employers or academic
+institutions.</p>
+
+<p>Generally speaking, committee members were chosen to represent
+the interests of communities (e.g. Fortran users, embedded systems
+developers, kernel hackers), not companies.</p></small>
 
 <h2>The original announcement from November 10, 1998:</h2>
 
@@ -80,10 +89,8 @@ Jim Wilson
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on October 11, 1999.</i></small>
+<small><i>Last modified on December 11, 1999.</i></small>
 </address>
 
 </body>
 </html>
-
-
