* Use gcc.gnu.org for /cgi-bin/htsearch since rewriting egcs.cygnus.com does not work for this. * Dummy changes for index.html and lists.html to make the searchbox change visible through web-caches.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -62,7 +62,7 @@
 
 <TD BGCOLOR="white" VALIGN="top">
 
-<img src="logo.jpg" alt="" align="right">
+<IMG SRC="logo.jpg" ALT="" ALIGN="RIGHT">
 
 <h2>Welcome to the GCC home page!</h2>
 
