--- a/htdocs/searchbox.html
+++ b/htdocs/searchbox.html
@@ -4,7 +4,7 @@ all the publicly available WWW documents at this site.
 <br>
 There is also a <a href="search.html">detailed search form</a>.
 <p>
-<form method="post" action="http://egcs.cygnus.com/cgi-bin/htsearch">
+<form method="post" action="http://gcc.gnu.org/cgi-bin/htsearch">
 <font size=-1>
 
 Match: <select name="method">
