Adjust URL-based restrictions in search.html after change to using gcc.gnu.org as the site name rather than egcs.cygnus.com

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -49,17 +49,17 @@ if nothing is marked, all pages.
      indexed at the moment.  -->
 <option value="/ml/e|/ml/g">
 all mailing lists.
-<!-- By not mentioning (.co)m/ml for the mailing lists, we exclude them
+<!-- By not mentioning (.or)g/ml for the mailing lists, we exclude them
      and "restrict" to everything else.  Since we're in a restrict
      field; that's the best we can do.  -->
 <option
-value="m/a|m/b|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/o|m/p|m/r|m/s|m/t|m/w">
+value="g/a|g/b|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/o|g/p|g/r|g/s|g/t|g/w">
 all web pages.
-<!-- We restrict to m/bu(gs.html) m/th(anks.html) and
-     m/ti(meline.html), excluding testresults and benchresults.
+<!-- We restrict to g/bu(gs.html) g/th(anks.html) and
+     g/ti(meline.html), excluding testresults and benchresults.
      FIXME: Better wording.  -->
 <option
-value="m/a|m/bu|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/o|m/p|m/r|m/s|m/th|/m/ti|m/w">
+value="g/a|g/bu|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/o|g/p|g/r|g/s|g/th|/g/ti|g/w">
 all regular web pages.
 </select>
 <br>
@@ -68,16 +68,16 @@ all regular web pages.
 </font>
 <br>
 <input type=checkbox name=restrict
-value="m/a|m/bu|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/p|m/r|m/s|m/ti|m/th|m/w">
+value="g/a|g/bu|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/p|g/r|g/s|g/ti|g/th|g/w">
 "Main" <a href="index.html">GCC</a>&nbsp;
-<input type=checkbox name=restrict value="m/o">
+<input type=checkbox name=restrict value="g/o">
 <a href="onlinedocs/">
 Documentation
 </a>&nbsp;
-<input type=checkbox name=restrict value="m/te">
+<input type=checkbox name=restrict value="g/te">
 <a href="testresults/">
 Test results</a>&nbsp;
-<input type=checkbox name=restrict value="m/be">
+<input type=checkbox name=restrict value="g/be">
 <a href="benchresults/">
 Benchmark results</a>
 <br>
@@ -223,7 +223,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 </i>
 <br>
 <!--#config timefmt="%B %e, %Y" -->
-<i>Last modified on 
+<i>This page was last modified on 
 <!--#echo var="LAST_MODIFIED" -->
 </i>
 <hr noshade size=1>
