- AIX fix for binder bug now available with PTF reference.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -348,7 +348,9 @@ website as PTF U453956.  This fix is incorporated in AIX 4.3.1 and above.</p>
 
 <p>The AIX 4.3.2.1 linker (bos.rte.bind_cmds Level 4.3.2.1) will dump core
 with a segmentation fault when invoked by any version of GCC.  A fix for
-APAR IX87327 will be available from IBM Customer Support.</p>
+APAR IX87327 is available from IBM Customer Support and from its
+<a href="http://service.boulder.ibm.com/">service.boulder.ibm.com</a>
+website as PTF U461879.  This fix is incorporated in AIX 4.3.3 and above.</p>
 
 
 <hr>
