--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -104,8 +104,8 @@ maintain and improve quality.
 <dt><b>December 10, 1999</b></dt>
 <dd>
 CodeSourcery, LLC has contributed a new <a href="news/inlining.html">inliner for
-C++</a>. As a result, memory consumption and compile-time may be dramatically
-reduced for programs that make heavy use of templates.
+C++</a>. As a result, the compiler may use dramatically less
+time and memory to compile programs that make heavy use of templates.
 </dd>
 
 
