--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -96,6 +96,8 @@ alphabetical order.
   <li> <a href="http://www.goof.com/pcg/marc/">Marc Lehmann</a> for his guidance via the steering committee and helping
        with analysis and improvements of x86 performance.
   <li> Kriang Lerdsuwanakij for improvements to demangler and various c++ fixes.
+  <li> Warren Levy major work on libgjc (Java Runtime Library) and random
+       work on the Java front-end.
   <li> <a href="http://robertl.freeservers.com">Robert Lipe</a> for OpenServer support, new testsuites, testing, etc.
   <li> Weiwen Liu for testing and various bugfixes.
   <li> <a href="http://www.informatik.hu-berlin.de/~loewis/">Martin von L&ouml;wis</a> for internal consistency checking infrastructure,
@@ -247,7 +249,7 @@ testing GCC:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  October 5, 1999</i>
+<p><i>Last modified:  December 13, 1999</i>
 
 <hr>
 <p><a href="index.html">Return to the GCC home page</a>
