--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -29,6 +29,9 @@ Successful
 <p><b>alphaev56-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>alphaev6-dec-osf4.0e</b><br>
+Successful
+
 <p><b>alphaev6-dec-osf4.0f</b><br>
 Successful
 
@@ -166,7 +169,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on November 10, 1999.</i>
+<i>Last modified on December 13, 1999.</i>
 
 </body>
 </html>
