Some further egcs->GCC conversions. By Joe Buck <jbuck@welsh-buck.org>.

--- a/htdocs/checkin.html
+++ b/htdocs/checkin.html
@@ -1,18 +1,18 @@
 <html>
 <head>
-<title>Checking in changes to egcs </title>
+<title>Checking in changes to GCC </title>
 </head>
 <body>
-<h1 align="center">Checking in changes to egcs </h1>
+<h1 align="center">Checking in changes to GCC</h1>
 
 <p>This page is meant to give a very brief outline of the policies and
-procedures for checking in files to egcs for those folks with write
+procedures for checking in files to GCC for those folks with write
 access to the repository.
 
 <hr>
 <h2>Write access policies</h2>
-<p>The egcs project grants some developers various levels of write access
-to the egcs master sources.  CVS doesn't provide fine grained control over
+<p>The GCC project grants some developers various levels of write access
+to the GCC master sources.  CVS doesn't provide fine grained control over
 access to the repository; therefore, we depend on each developer to follow
 the appropriate policies.
 
@@ -31,11 +31,11 @@ the appropriate policies.
   but who do not "own" any particular piece of code.  People with write after
   approval need to submit their patches to the list; once the patches have
   been approved by the appropriate maintainers the patches may be checked into
-  the egcs sources.
+  the GCC sources.
 </ul>
 
 <p>The list of folks with write access to the repository can be found in the
-<tt>MAINTAINERS</tt> file in the egcs distribution.
+<tt>MAINTAINERS</tt> file in the GCC distribution.
 <hr>
 
 <p>Also note that fixes for obvious typos in ChangeLog files, docs, web
@@ -78,7 +78,7 @@ copyright dates need to be updated.
 log message via the "<tt>-m</tt>" argument to commit, or wait for the
 editor window to appear and enter the log message in the editor window.
 
-<p>After exiting the editor, CVS will connect to the egcs cvs server and
+<p>After exiting the editor, CVS will connect to the GCC cvs server and
 check in your changes.  When your prompt returns the checkin is finished.
 A message will be sent to the "<tt>gcc-cvs</tt>" mailing list (when
 set up) indicating that a change was made.  CVS will provide a message
@@ -88,7 +88,7 @@ if an error occurs and it will not check in any files.
 <h2> Example check-in session </h2>
 
 <p>Here's an actual check-in session for a patch John Carr recently sent
-to the egcs list.  This was the <tt>ChangeLog</tt> for his change:
+to the GCC list.  This was the <tt>ChangeLog</tt> for his change:
 
 <blockquote>
 <pre>
@@ -269,7 +269,7 @@ you should check them in with separate cvs commit commands.
 <p>And that's it!
 
 <hr>
-<i>Last modified on July 13, 1999.</i>
+<i>Last modified on December 16, 1999.</i>
 
 </body>
 </html>
