--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -23,7 +23,7 @@ law@cygnus.com</a>.  Yes, we realize it's a public key, but there's no sense
  in cluttering up the developers list with keys.
 
 <p>Once we have this information we will set up an account on
-egcs.cygnus.com and inform you by mail.  At this point you should be
+gcc.gnu.org and inform you by mail.  At this point you should be
 able to check out a tree with CVS and add yourself to the MAINTAINERS
 file to test write access.
 
@@ -35,10 +35,10 @@ your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
 the command
 
 <blockquote><code>
-cvs -z 9 -d :ext:username@egcs.cygnus.com:/cvs/gcc co egcs
+cvs -z 9 -d :ext:username@gcc.gnu.org:/cvs/gcc co egcs
 </code></blockquote>
 
-where <code>username</code> is your user name at egcs.cygnus.com.
+where <code>username</code> is your user name at gcc.gnu.org.
 This will check out a new CVS tree that you should be able to work with
 in the normal fashion, including committing changes.
 
@@ -47,7 +47,7 @@ in the normal fashion, including committing changes.
 all the "Root" files in the local tree with the following contents:
 
 <blockquote><code>
-username@egcs.cygnus.com:/cvs/gcc
+username@gcc.gnu.org:/cvs/gcc
 </code></blockquote>
 
 
@@ -61,7 +61,7 @@ in each relevant process to what <code>ssh-agent</code> prints when it
 starts.  To avoid messages about (lack of) X11 forwarding, put in your
 <samp>$HOME/.ssh/config</samp> and entry like:
 <blockquote><code>
-Host egcs.cygnus.com<br>
+Host gcc.gnu.org<br>
 ForwardX11 no
 </code></blockquote>
 
@@ -71,9 +71,9 @@ ForwardX11 no
 automatically be checked out into the web server's data area.
 
 <hr>
-<i>Last modified on July 14, 1999.</i>
+<i>Last modified on December 16, 1999.</i>
 
 <hr>
-<a href="/">Return to the egcs home page</a>
+<a href="/">Return to the GCC home page</a>
 </body>
 </html>
