--- a/htdocs/spam.html
+++ b/htdocs/spam.html
@@ -5,7 +5,7 @@
 <body>
 <h1 align="center">Dealing with SPAM</h1>
 
-<p>Occasionally some bozo decides to spam the egcs mailing lists.  While we
+<p>Occasionally some bozo decides to spam the GCC mailing lists.  While we
 wish this would not happen, it is a fact of life on an open list (we do not
 want to run a list where only members can post).
 
