--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,7 +18,8 @@
 </P>
 <H2>Docs</H2>
 <P>
-<A HREF="faq.html">FAQ</A><BR>
+<A HREF="http://gcc.gnu.org/cgi-bin/fom">FAQ</A><BR>
+<A HREF="faq.html">Old FAQ</A><BR>
 <A HREF="install/index.html">Installation</A><BR>
 <A HREF="onlinedocs/">Manual</A><BR>
 <A HREF="http://www.gnu.org/software/year2000.html">Year 2000</A><BR>
