Added link to checkin.html

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -25,7 +25,8 @@ law@cygnus.com</a>.  Yes, we realize it's a public key, but there's no sense
 <p>Once we have this information we will set up an account on
 gcc.gnu.org and inform you by mail.  At this point you should be
 able to check out a tree with CVS and add yourself to the MAINTAINERS
-file to test write access.
+file to test write access.  See <a href="checkin.html">checkin.html</a>
+for how to proceed with checking in your changes.
 
 
 <h2>Setting up your local CVS tree</h2>
