Add search engine setup improvements to my thanks

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -138,8 +138,8 @@ alphabetical order.
   <li> Joseph Myers for his work on the PDP-11 port.
   <li> Nathan Myers for his work on libstdc++-v3.
   <li> Pieter Nagel
-  <li> Hans-Peter Nilsson for various documentation fixes and other
-small fixes.
+  <li> Hans-Peter Nilsson for improvements to the search engine
+  setup, various documentation fixes and other small fixes.
   <li> Geoff Noer for this work on getting cygwin native builds working.
   <li> Markus F.X.J. Oberhumer
   <li> Sergey Okhapkin
