--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -490,7 +490,7 @@ dejagnu snapshot</a> available until a new version of dejagnu can be released.</
 <p>Or, if you use <code>make check</code> you can use the
 <code>make</code> variable <code>RUNTESTFLAGS</code>, e.g:</p>
 <pre>
-  make RUNTESTFLAGS='--tool_opts "-fnew-abi -fno-honor-std"' check-g++
+  make RUNTESTFLAGS="--tool_opts '-fnew-abi -fno-honor-std'" check-g++
 </pre>
 
 <hr>
@@ -504,7 +504,7 @@ dejagnu snapshot</a> available until a new version of dejagnu can be released.</
 <p>Or, if you use <code>make check</code> you can use the
 <code>make</code> variable <code>RUNTESTFLAGS</code>, e.g:</p>
 <pre>
-  make RUNTESTFLAGS='--target_board "unix{-fPIC,-fpic,}"' check-gcc
+  make RUNTESTFLAGS="--target_board 'unix{-fPIC,-fpic,}'" check-gcc
 </pre>
 <p>Either of these examples will run the tests three times.   Once 
 with <code>-fPIC</code>, once with <code>-fpic</code>, and once with 
@@ -1172,7 +1172,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified:  November 2, 1999</i></p>
+<p><i>Last modified: December 24, 1999</i></p>
 
 </body>
 </html>
