Some further egcs -> gcc changes. Use a relative link where possible.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -186,7 +186,7 @@ Jason Merrill.
 <dt><b>April 13, 1999</b></dt>
 <dd>
 We have set up a new <a href="lists.html">mailing list</a>
-<a href="http://egcs.cygnus.com/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>
+<a href="http://gcc.gnu.org/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a>
 that tracks checkins to the egcs webpages CVS repository.
 </dd>
 
@@ -238,8 +238,7 @@ The egcs project now has
 <a href="mailto:rth@cygnus.com">Richard Henderson</a> of
 <a href="http://www.cygnus.com">Cygnus Solutions</a> has donated a major
 rewrite of the
-<a href="http://egcs.cygnus.com/news/cfg.html">control flow analysis pass</a>
-of the compiler.
+<a href="news/cfg.html">control flow analysis pass</a> of the compiler.
 </dd>
 
 <dt><b>February 25, 1999</b></dt>
