--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -5,7 +5,7 @@
 <body>
 <h1><a href="index.html">GCC</a> detailed search</h1>
 <hr noshade size=1>
-<form method="GET" action="http://egcs.cygnus.com/cgi-bin/htsearch">
+<form method="GET" action="http://gcc.gnu.org/cgi-bin/htsearch">
 <font size=-1>
 Match: <select name=method>
 <option value=boolean>Boolean expression
