Note about Y2K problems with older CVS versions

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -9,6 +9,10 @@ significant developers.
 
 <p>If you don't already have CVS, we recommend you pick up a recent copy from
 cyclic software at <a href="http://www.cyclic.com/">http://www.cyclic.com</a>.
+<br>
+Please note that CVS versions up to 1.10.4 have "Y2K problems".  Refer to
+<a href="http://www.cyclic.com/cvs/dev-y2k.html">
+http://www.cyclic.com/cvs/dev-y2k.html</a> for details.
 
 <p>Authenticated access is provided via ssh, which you can retrieve from
 <a href="ftp://ftp.cs.hut.fi/pub/ssh/">ftp://ftp.cs.hut.fi/pub/ssh/</a>.
@@ -72,7 +76,7 @@ ForwardX11 no
 automatically be checked out into the web server's data area.
 
 <hr>
-<i>Last modified on December 23, 1999.</i>
+<i>Last modified on December 30, 1999.</i>
 
 <hr>
 <a href="/">Return to the GCC home page</a>
