--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -129,6 +129,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
       Note also that the lists from 1997-1998 are not here, except for
      ...-announce.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2000-01">Jan 2000
 <option value="gcc/1999-12">Dec 1999
 <option value="gcc/1999-11">Nov 1999
 <option value="gcc/1999-10">Oct 1999
@@ -143,6 +144,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc/1999-01">Jan 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2000-01">Jan 2000
 <option value="gcc-bugs/1999-12">Dec 1999
 <option value="gcc-bugs/1999-11">Nov 1999
 <option value="gcc-bugs/1999-10">Oct 1999
@@ -156,6 +158,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-bugs/1999-02">Feb 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2000-01">Jan 2000
 <option value="gcc-patches/1999-12">Dec 1999
 <option value="gcc-patches/1999-11">Nov 1999
 <option value="gcc-patches/1999-10">Oct 1999
@@ -169,12 +172,14 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-patches/1999-02">Feb 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2000-01">Jan 2000
 <option value="gcc-help/1999-12">Dec 1999
 <option value="gcc-help/1999-11">Nov 1999
 <option value="gcc-help/1999-10">Oct 1999
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2000-01">Jan 2000
 <option value="gcc-cvs/1999-12">Dec 1999
 <option value="gcc-cvs/1999-11">Nov 1999
 <option value="gcc-cvs/1999-10">Oct 1999
@@ -189,6 +194,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-cvs/1999-01">Jan 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2000-01">Jan 2000
 <option value="gcc-testresults/1999-12">Dec 1999
 <option value="gcc-testresults/1999-11">Nov 1999
 <option value="gcc-testresults/1999-10">Oct 1999
@@ -203,10 +209,12 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-testresults/1999-01">Jan 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-announce/2000">2000
 <option value="gcc-announce/1999">1999
 <option value="gcc-announce/1997-1998">1997-8
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs-wwwdocs/2000">2000
 <option value="gcc-cvs-wwwdocs/1999">1999
 </select></td>
 </tr>
@@ -219,10 +227,10 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <!-- We don't use #flastmod here, since #flastmod does not accept full
      paths in Apache 1.3.9, and we don't want a symlink in this or a
      lower directory.  -->
-<!--#exec cmd="/bin/date -r /sourceware/htdig/gcc/db/db.docdb +'%B %e, %Y (%H:%M %Z)'" -->
+<!--#exec cmd="/bin/date -r /sourceware/htdig/gcc/db/db.docdb +'%Y-%m-%d (%H:%M %Z)'" -->
 </i>
 <br>
-<!--#config timefmt="%B %e, %Y" -->
+<!--#config timefmt="%Y-%m-%d" -->
 <i>This page was last modified on 
 <!--#echo var="LAST_MODIFIED" -->
 </i>
