Note picoJava port.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -102,6 +102,11 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>January 4, 2000</b></dt>
+<dd>
+Steve Chamberlain has contributed a picoJava port.
+</dd>
+
 <dt><b>December 10, 1999</b></dt>
 <dd>
 CodeSourcery, LLC has contributed a new <a href="news/inlining.html">inliner for
@@ -154,7 +159,7 @@ href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on December 10, 1999.</i></small>
+<small><i>Last modified on January 4, 2000.</i></small>
 </address>
 
 </body>
