--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -61,40 +61,43 @@
               the support? </a></li>
             <li><a href="#2_2">Does GCJ support using straight C native methods 
               ala JNI? CNI looks kind of hard to use.</a></li>
-            <li><a href="#3_3">Why does GCJ use CNI? </a></li>
-            <li><a href="#2_3">What is the state of AWT support?</a></li>
-            <li><a href="#2_4">How about support for Swing ?</a></li>
-            <li><a href="#2_5">What support is there for RMI ?</a></li>
-            <li><a href="#2_6">Can I use any code from other OpenSource projects 
+            <li><a href="#2_3">Why does GCJ use CNI? </a></li>
+            <li><a href="#2_4">What is the state of AWT support?</a></li>
+            <li><a href="#2_5">How about support for Swing ?</a></li>
+            <li><a href="#2_6">What support is there for RMI ?</a></li>
+            <li><a href="#2_7">Can I use any code from other OpenSource projects 
               to supplement libgcj's current features ?</a></li>
-            <li><a href="#2_7">What features of the Java language are/arn't supported</a></li>
+            <li><a href="#2_8">What features of the Java language are/arn't supported</a></li>
           </ol>
-        <li><a href="#2_0">Build Issues</a> 
+        <li><a href="#3_0">Build Issues</a> 
           <ol>
+            <li><a href="#3_1">I need something more recent than the last release; how
+                  should I build it?</a>
             <li><a href="#3_2">Linker bug on Solaris</a> 
           </ol>
         <li><a href="#4_0">Gcj Compile/Link Questions</a> 
           <ol>
             <li><a href="#4_1">Why do I get <tt>undefined reference to `main'</tt> 
               errors?</a> 
-            <li><a href="#4_2">4.2 Can GCJ only handle source code? </a> 
+            <li><a href="#4_2">Can GCJ only handle source code? </a> 
             <li><a href="#4_3">&quot;gcj -C" Doesnt seem to work like javac/jikes. 
               Whats going on? </a> 
             <li><a href="#4_4">Where does GCJ look for files? </a> 
-            <li><a href="#4_4">How does gcj resolve wether to compile .class or 
+            <li><a href="#4_5">How does gcj resolve wether to compile .class or 
               .java files? </a> 
-            <li><a href="#4_5">How do I increase the runtime's initial and maximum 
-              heap sizes? </a> 
           </ol>
         <li><a href="#5_0">Runtime Questions</a> 
           <ol>
             <li><a href="#5_1">My program is dumping core! What's going on?</a> 
             <li><a href="#5_2">When I run the debugger I get a SEGV in the GC! 
               What's going on?</a> 
-            <li><a href="#5_3">Can I profile Garbage Collection? </a> 
-            <li><a href="#5_4">How do I increase the runtime's initial and maximum 
+            <li><a href="#5_3">I have just compiled and benchmarked my Java application 
+            and it seems to be running slower than than XXX JIT JVM. Is there 
+            anything I can do to make it go faster?</a>
+            <li><a href="#5_4">Can I profile Garbage Collection? </a> 
+            <li><a href="#5_5">How do I increase the runtime's initial and maximum 
               heap sizes?</a> 
-            <li><a href="#5_5">How can I profile my application?</a> 
+            <li><a href="#5_6">How can I profile my application?</a> 
           </ol>
         <li><a href="#6_0">Programing Issues</a> 
           <ol>
@@ -150,8 +153,9 @@
           <h3><a name="1_5">1.5 Will gcj and libgcj work on my machine?</a></h3>
         </dt>
         <p> 
-        <dd>So far gcj and libgcj have only really been tried on Sparc Solaris 
-          and x86 Linux. They might work on other systems, but we don't know. 
+        <dd>Gcj and libgcj are known to work more or less with IA-32 and 
+          Sparc Solaris, as well as IA-32, Alpha, and PowerPC Linux. 
+	  They might work on other systems, but we don't know. 
           Generally speaking, porting to a new system should not be hard. This 
           would be a good way to volunteer.</dd>
         <p></p>
@@ -162,14 +166,13 @@
         <p> 
         <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb 4.18</a> 
           includes support for debugging gcj-compiled Java programs. For linux, 
-          you will need to use a recent development snapshot (link) of gdb, because 
+          you will need to use a recent development snapshot of gdb from <a href="ftp://sourceware.cygnus.com/pub/gdb/snapshots/">ftp://sourceware.cygnus.com/pub/gdb/snapshots/</a> because 
           the standard 4.18 does not have support for linux threads.</dd>
         <dt>&nbsp; </dt>
       </dl>
       <table border="0" cellpadding="4" width="95%">
         <tr bgcolor="#B0D0FF"> 
           <th align="left"> 
-            <h2>&nbsp;</h2>
             <h2><a name="2_0">Java Feature Support</a></h2>
           </th>
         </tr>
@@ -201,26 +204,8 @@
             all of those native methods yourself, and make sure they behave exactly 
             as Sun's do. Note that they're undocumented! </dd>
         </dl>
-        <dl> 
-          <dt>&nbsp;</dt>
-          <dd>&nbsp;</dd>
-        </dl>
         <dt>&nbsp;</dt>
-        <dd>To date Reflection is not supported, although all the required metadata 
-          is included in Class.h.</dd>
-        <dl> 
-          <dd> 
-            <dl> 
-              <dt>&nbsp; </dt>
-            </dl>
-          </dd>
-        </dl>
-        <dl> 
-          <dt> 
-            <dl> 
-              <dd></dd>
-            </dl>
-          </dt>
+       </dl>
         </dl>
         <hr>
         <h3><a name="2_2">2.2 </a>Does GCJ support using straight C native methods 
@@ -256,7 +241,7 @@
           </dt>
         </dl>
         <hr>
-        <h3><a name="2_2">2.3 </a>Why does GCJ use CNI? </h3>
+        <h3><a name="2_3">2.3 </a>Why does GCJ use CNI? </h3>
         <blockquote> 
           <p><a href="mailto:per@bothner.com">Per Bothner</a> explains </p>
           <blockquote> 
@@ -275,7 +260,7 @@
         </blockquote>
         <hr>
       </dl>
-      <h3><a name="4_4">2.4 What is the state of AWT support</a>?</h3>
+      <h3><a name="2_4">2.4 What is the state of AWT support</a>?</h3>
       <dl> 
         <dd> No support is currently in place for AWT. Prior Art which could be 
           used for this all require JNI. Possible starting points follow: 
@@ -399,7 +384,7 @@
       </dl>
       <dl> 
         <dt> 
-          <h3><a name="2_7">2.7 Can I contribute code from other Free Software 
+          <h3><a name="2_7">2.7 Can I use any code from other OpenSource
             projects to supplement libgcj's current features?</a></h3>
         </dt>
         <dd> <font color="#FF6600">Can someone point me to some difinitive words 
@@ -413,11 +398,11 @@
       </dl>
       <dl> 
         <dt> 
-          <h3><a name="2_8">2.8 What features of the Java language are/arn't supported.</a></h3>
+          <h3><a name="2_8">2.8 What features of the Java language are/aren't supported.</a></h3>
         </dt>
         <dd>At the moment GCJ supports all Java language constructs as per the 
           <a href="http://java.sun.com/docs/books/jls/">Java language Specification 
-          v1.0</a>. The JDK1.1 added support for Inner Classes, which arent yet 
+          v1.0</a>. The JDK1.1 added support for Inner Classes, which aren't yet 
           supported when compiling from source code, but can be used when compiling 
           from bytecode. see <i>4.2 Can GCJ only handle source code?</i> </dd>
       </dl>
@@ -431,9 +416,20 @@
           </th>
         </tr>
       </table>
+
       <dl> 
         <dt> 
-          <h3><a name="3_1">3.1 Linker bug on Solaris</a></h3>
+          <h3><a name="3_1">3.1 I need something more recent than the last release; how should I build it?</a></h3>
+        </dt>
+        <p> 
+        <dd>Please read <a href="build-snapshot.html">here</a>.
+        </dd>
+        <p></p>
+      </dl>
+
+      <dl> 
+        <dt> 
+          <h3><a name="3_2">3.2 Linker bug on Solaris</a></h3>
         </dt>
         <p> 
         <dd>There is a known problem with the <a href="http://egcs.cygnus.com/ml/gcc-bugs/1999-10/msg00159.html"> 
@@ -519,7 +515,7 @@ collect2: ld returned 1 exit status
         <dt>&nbsp;</dt>
         <dt><font color="#FF3300"></font></dt>
         <dt> 
-          <h3><a name="4_4">4.3 &quot;gcj -C"</a> Doesnt seem to work like javac/jikes. 
+          <h3><a name="4_3">4.3 &quot;gcj -C"</a> Doesnt seem to work like javac/jikes. 
             Whats going on?</h3>
         </dt>
         <blockquote> 
@@ -548,7 +544,7 @@ collect2: ld returned 1 exit status
       </dl>
       <dl> 
         <dt> 
-          <h3><a name="4_5">4.5 How does gcj resolve wether to compile .class 
+          <h3><a name="4_5">4.5 How does gcj resolve whether to compile .class 
             or .java files?</a></h3>
         </dt>
         <blockquote> 
@@ -616,7 +612,7 @@ collect2: ld returned 1 exit status
           <ul>
             <li>If your programs allocate many small, short lived objects, the 
               heap could be filling and triggering GC too regularly. Try increasing 
-              the initial and maximum heap sizes as per <i>5.3 How do I increase 
+              the initial and maximum heap sizes as per <i>5.5 How do I increase 
               the runtime's initial and maximum heap size?</i></li>
             <li>RE - array accesses. We have sub-optimal runtime checking code, 
               and the compiler is still not so smart about automatically removing 
@@ -642,7 +638,7 @@ collect2: ld returned 1 exit status
         <hr>
         <dt>&nbsp;</dt>
         <dt> 
-          <h3><a name="5_3">5.3 Can I profile Garbage Collection?</a></h3>
+          <h3><a name="5_4">5.4 Can I profile Garbage Collection?</a></h3>
         </dt>
         <dd>It is possible to turn on verbose GC output by supressing the -DSILENT 
           flag during build. One way to do this is to comment out the line with 
@@ -655,7 +651,7 @@ collect2: ld returned 1 exit status
         <hr>
         <dt>&nbsp;</dt>
         <dt> 
-          <h3><a name="5_3">5.4 How do I increase the runtime's initial and maximum 
+          <h3><a name="5_5">5.5 How do I increase the runtime's initial and maximum 
             heap sizes?</a></h3>
         </dt>
         <dd>Some programs that allocate many small, short-lived objects can cause 
@@ -667,7 +663,7 @@ collect2: ld returned 1 exit status
       <hr>
       <dl> 
         <dt> 
-          <h3><a name="5_3">5.5 How can I profile my application?</a></h3>
+          <h3><a name="5_6">5.6 How can I profile my application?</a></h3>
         </dt>
         <dd>Support for this is currently lagging. Only single threaded Java code 
           may be used by the profiler (gprof). POSIX threads seem to be incompatible 
@@ -684,11 +680,10 @@ collect2: ld returned 1 exit status
       </table>
       <h3><a name="6_1"></a>6.1 Are there any examples of how to use CNI?</h3>
       <blockquote> 
-        <p><a href="mailto:tromey@cygnus.com">Tom Tromey</a> has created a couple 
-          of simple ezamples <a href="cni-1.txt">here</a> and <a href="cni-2.txt">here</a>. 
-        </p>
-        <p>Another CNI example may be found here (thanks to Glenn Chambers!): 
-          <a href="http://sourceware.cygnus.com/ml/java-discuss/1999-q3/msg00534.html">http://sourceware.cygnus.com/ml/java-discuss/1999-q3/msg00534.html</a> 
+        <p>Glenn Chambers</a> has created a couple 
+          of trivial examples <a href="cni-1.txt">here</a> and <a href="cni-2.txt">here</a>. 
+        As a comparision, <a href="jni-kaffe.txt">here</a>
+        is the same example as a JNI application.
         </p>
         <p>The primary source of documentation for CNI is at <a href="http://sourceware.cygnus.com/java/papers/cni/t1.html">http://sourceware.cygnus.com/java/papers/cni/t1.html</a></p>
       </blockquote>
@@ -697,7 +692,7 @@ collect2: ld returned 1 exit status
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.7 1999/12/20 01:05:31 brads Exp $ </small></address>
+<small> $Id: faq.html,v 1.8 1999/12/22 17:36:43 green Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
