--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -131,6 +131,9 @@ Successful
 <p><b>powerpc-ibm-aix4.3.2.0</b><br>
 Successful
 
+<p><b>powerpc-unknown-linux-gnulibc1</b><br>
+Successful
+
 <p><b>powerpc-unknown-linux-gnu</b><br>
 Successful
 
@@ -169,7 +172,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on December 13, 1999.</i>
+<i>Last modified on January 6, 1999.</i>
 
 </body>
 </html>
