--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -152,6 +152,9 @@ Successful
 <p><b>sparc-sun-solaris2.4</b><br>
 Successful
 
+<p><b>sparc-sun-solaris2.5</b><br>
+Successful
+
 <p><b>sparc-sun-solaris2.5.1</b><br>
 Successful
 
