Mention a couple of further binary distributions.

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -16,11 +16,21 @@ by us; if you have any problems installing them, please contact their
 makers.</p>
 
 <ul>
-<li><a href="http://www.delorie.com/djgpp/">DJPP for DOS</a>
-<li><a href="http://sourceware.cygnus.com/cygwin/">Cygwin for Windows 95,
-    98, and NT</a>
-<li><a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">GNU
-    Win32 related projects</a> by Mumit Khan.
+<li><a href="ftp://aixpdslib.seas.ucla.edu/pub/gcc/RISC/">AIX</a>
+
+<li>DOS: <a href="http://www.delorie.com/djgpp/">DJPP</a>
+
+<li><a href="http://www.sco.com/skunkware/devtools/index.html#gcc">SCO
+    OpenServer/Unixware</a>
+
+<li>Solaris (SPARC, Intel): <a
+    href="http://www.sunfreeware.com/">Sunfreeware</a>
+
+<li>Windows 95, 98, and NT: 
+    <a href="http://sourceware.cygnus.com/cygwin/">Cygwin for Windows 95,
+    98, and NT</a> |
+    <a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">GNU
+    Win32 related projects</a> by Mumit Khan
 </ul>
 
 <!--
@@ -29,7 +39,7 @@ makers.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
-<p><i>Last modified on January 5, 2000.</i></p>
+<p><i>Last modified on January 7, 2000.</i></p>
 
 </body>
 </html>
