Some egcs -> GCC and absolute -> relative link conversions.

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -33,7 +33,7 @@
     <li><a href="http://egcs.cygnus.com/onlinedocs/g77_news.html">Many Fortran improvements</a>.
     <li><a href="http://sourceware.cygnus.com/java/gcj-announce.txt">Java</a>
     front-end has been integrated.  A
-    <a href="http://egcs.cygnus.com/javaannounce.html">runtime library</a>
+    <a href="../javaannounce.html">runtime library</a>
     is available separately.
     <li>ISO C9X support
     <li><a href="../news/chill.html">Chill</a> front-end and runtime has been
@@ -81,7 +81,7 @@
 </ul>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  August 3, 1999</i>
+<p><i>Last modified:  January 7, 2000</i>
 
 </body>
 </html>
