--- a/htdocs/egcs-1.0/buildstat.html
+++ b/htdocs/egcs-1.0/buildstat.html
@@ -63,7 +63,7 @@ failures, probably due to old binutils too.
 
 <p><b>i?86-pc-solaris*</b><br>
 You'll need a patch to fix an EGCS bug on this platform.
-<a href="http://egcs.cygnus.com/faq.html#x86solaris">x86 solaris patch</a>
+<a href="../faq.html#x86solaris">x86 solaris patch</a>
 
 
 <p><b>i386-pc-bsdi3.0</b><br>
@@ -136,7 +136,7 @@ conflicting g++ test results ont his platform.
 
 <hr>
 <p>
-<i>Last modified on July 28, 1999.</i>
+<i>Last modified on January 7, 2000.</i>
 
 </body>
 </html>
