--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -17,7 +17,7 @@ be found in <i>prefix</i>/bin where <i>prefix</i> is the value you specified
 with the --prefix to configure (or /usr/local by default).
 
 <p>If you don't mind, please quickly review the <a
-href="http://egcs.cygnus.com/gcc-2.95/buildstat.html">build status page</a>.
+href="http://gcc.gnu.org/gcc-2.95/buildstat.html">build status page</a>.
 If your system is not listed, send a note to
 <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a> indicating
 that you successfully built and installed GCC.
@@ -31,7 +31,7 @@ href="../faq.html#bugreport">bug reporting guidlines</a>.
 
 <p>
 <hr>
-<i>Last modified on July 16, 1999.</i>
+<i>Last modified on January 7, 2000.</i>
 
 </body>
 </html>
